# anima

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  README.md  README.zh-CN.md
.agents/harn/: config.toml
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  HARNESS-GUIDE.md  HARNESS-GUIDE.zh-CN.md  HARNESS-SPEC.md  HARNESS-SPEC.zh-CN.md  QUALITY_SCORE.md  commands.md  design.md  generated-content.md  product-spec.md
docs/decisions/: 006-seed-validation-results.md  008-check-as-first-sense.md
docs/design-docs/: core-beliefs.md
docs/evaluation/examples/: code-quality.md
docs/exec-plans/completed/: 2026-04-07-code-review-evolution.md
src/: assess.rs  check.rs  cli.rs  config.rs  detect.rs  gc.rs  main.rs  plan.rs  score.rs  sprint.rs  status.rs  types.rs  upgrade.rs  util.rs
src/assess/: checks.rs  mod.rs  report.rs
src/init/: mod.rs  render.rs
templates/: AGENTS.md.j2  ARCHITECTURE.md.j2
tests/: architecture.rs  check.rs  e2e.rs  init.rs  plan.rs  score.rs  sprint.rs  status_gc.rs  upgrade.rs
tests/helpers/: mod.rs
